--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "rxjs": "^6.4.0"
     },
     "devDependencies": {
+        "@types/fs-extra": "^9.0.8",
+        "@types/glob": "^7.1.3",
         "@types/inquirer": "^7.0.0",
         "@types/node": "^14.14.26",
         "cpx": "^1.5.0",
@@ -44,11 +46,13 @@
         "typescript": "^4.1.5"
     },
     "dependencies": {
-        "@angular-devkit/architect": "^0.1102.0",
+        "@angular-devkit/architect": "^0.803.29",
         "@angular-devkit/core": ">= 8.0.0",
         "@angular-devkit/schematics": ">= 8.0.0",
         "@schematics/angular": ">= 8.0.0",
+        "chokidar": "^3.5.1",
         "fs-extra": "^9.1.0",
+        "glob": "^7.1.6",
         "inquirer": "^7.0.0"
     },
     "builders": "./dist/builders/builders.json",
