--- a/package.json
+++ b/package.json
@@ -48,10 +48,11 @@
         "typescript": "^4.1.5"
     },
     "dependencies": {
-        "@angular-devkit/architect": "^0.803.29",
-        "@angular-devkit/core": ">= 8.0.0",
-        "@angular-devkit/schematics": ">= 8.0.0",
-        "@schematics/angular": ">= 8.0.0",
+        "@angular-devkit/architect": ">=0.800.0 <0.900.0",
+        "@angular-devkit/core": "^8.0.0",
+        "@angular-devkit/schematics": "^8.0.0",
+        "@schematics/angular": "^8.0.0",
+        "ansi-colors": "^4.1.1",
         "chokidar": "^3.5.1",
         "fs-extra": "^9.1.0",
         "glob": "^7.1.6",
