--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "author": "da-mkay (https://github.com/da-mkay)",
     "license": "MIT",
     "peerDependencies": {
-        "typescript": ">=3.4 <4.2",
+        "typescript": ">=3.4 <4.3",
         "rxjs": "^6.4.0"
     },
     "devDependencies": {
@@ -45,13 +45,13 @@
         "pretty-quick": "^3.1.0",
         "rimraf": "^3.0.2",
         "rxjs": "^6.4.0",
-        "typescript": "^4.1.5"
+        "typescript": "~4.2.0"
     },
     "dependencies": {
-        "@angular-devkit/architect": ">=0.800.0 <0.900.0",
-        "@angular-devkit/core": "^8.0.0",
-        "@angular-devkit/schematics": "^8.0.0",
-        "@schematics/angular": "^8.0.0",
+        "@angular-devkit/architect": ">=0.1200.0 <0.1300.0",
+        "@angular-devkit/core": "^12.0.0",
+        "@angular-devkit/schematics": "^12.0.0",
+        "@schematics/angular": "^12.0.0",
         "ansi-colors": "^4.1.1",
         "chokidar": "^3.5.1",
         "fs-extra": "^9.1.0",
