--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "scripts": {
         "build": "npm run clean && tsc -p tsconfig.json && npm run copy:jsons && npm run copy:schematic-files",
         "clean": "rimraf dist",
-        "copy:jsons": "cpx 'src/**/{schema,collection,builders}.json' ./dist",
-        "copy:schematic-files": "cpx 'src/schematics/**/files/**' ./dist/schematics"
+        "copy:jsons": "copyfiles --up 1 'src/**/*.json' ./dist",
+        "copy:schematic-files": "copyfiles --up 2 'src/schematics/**/files/**' ./dist/schematics"
     },
     "husky": {
         "hooks": {
@@ -31,27 +31,27 @@
     "author": "da-mkay (https://github.com/da-mkay)",
     "license": "MIT",
     "peerDependencies": {
-        "typescript": ">=3.4 <4.3",
-        "rxjs": "^6.4.0"
+        "rxjs": "^6.5.3",
+        "typescript": ">=4.4.3 <4.7.0"
     },
     "devDependencies": {
         "@types/fs-extra": "^9.0.8",
         "@types/glob": "^7.1.3",
         "@types/inquirer": "^7.0.0",
-        "@types/node": "^14.14.26",
-        "cpx": "^1.5.0",
+        "@types/node": "^16.10.0",
+        "copyfiles": "^2.4.1",
         "husky": "^5.0.9",
         "prettier": "^2.2.1",
         "pretty-quick": "^3.1.0",
         "rimraf": "^3.0.2",
-        "rxjs": "^6.4.0",
-        "typescript": "~4.2.0"
+        "rxjs": "^6.5.3",
+        "typescript": ">=4.4.3 <4.7.0"
     },
     "dependencies": {
-        "@angular-devkit/architect": ">=0.1200.0 <0.1300.0",
-        "@angular-devkit/core": "^12.0.0",
-        "@angular-devkit/schematics": "^12.0.0",
-        "@schematics/angular": "^12.0.0",
+        "@angular-devkit/architect": ">=0.1300.0 <0.1400.0",
+        "@angular-devkit/core": "^13.0.0",
+        "@angular-devkit/schematics": "^13.0.0",
+        "@schematics/angular": "^13.0.0",
         "ansi-colors": "^4.1.1",
         "chokidar": "^3.5.1",
         "fs-extra": "^9.1.0",
