--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "author": "da-mkay (https://github.com/da-mkay)",
     "license": "MIT",
     "peerDependencies": {
-        "rxjs": "^6.5.3",
         "typescript": ">=4.4.3 <4.7.0"
     },
     "devDependencies": {
@@ -44,7 +43,6 @@
         "prettier": "^2.2.1",
         "pretty-quick": "^3.1.0",
         "rimraf": "^3.0.2",
-        "rxjs": "^6.5.3",
         "typescript": ">=4.4.3 <4.7.0"
     },
     "dependencies": {
@@ -56,7 +54,8 @@
         "chokidar": "^3.5.1",
         "fs-extra": "^9.1.0",
         "glob": "^7.1.6",
-        "inquirer": "^7.0.0"
+        "inquirer": "^7.0.0",
+        "rxjs": "^6.5.3"
     },
     "builders": "./dist/builders/builders.json",
     "schematics": "./dist/schematics/collection.json",
