--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "sourceMap": true,
         "target": "es6",
         "types": ["node"],
-        "outDir": "dist"
+        "outDir": "dist",
+        "skipLibCheck": true
     },
     "include": ["src/**/*.ts"],
     "exclude": ["src/schematics/**/files/**/*.ts"]
