--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "fs-extra": "^9.1.0",
         "glob": "^10.4.5",
         "inquirer": "^8.2.4",
+        "minimatch": "^9.0.5",
         "rxjs": "^7.4.0"
     },
     "builders": "./dist/builders/builders.json",
